tests/custom/STARIS_2022/operation-type-errors/substring-type-error/stderr.expected
Error:
    Parser error in file: substring-type-error.essence Error is:
ValidatorError substring-type-error.essence:2:16:
  |
2 | such that b = (4 substring false)
  |                ^
Type error:
	Expected: sequence of ?
	Got: int

substring-type-error.essence:2:28:
  |
2 | such that b = (4 substring false)
  |                            ^^^^^
Type error:
	Expected: sequence of ?
	Got: bool

